      when cooking.  It defaults to True, but can be changed to False
      to cause Conary to cook and commit absolute changesets. (CNY-912)
    * A list of X.org mirrors has been added to the default mirrors.
    * "cvc diff" now returns 2 on error, 1 if there are differences, and
      0 if there are no differences (CNY-938).

  o Bug Fixes
    * The build time is now displayed properly as "(unknown)" if a
      trove has no build time set. (CNY-990)
    * dbsh now properly loads the schema when one of the .show commands is
      executed. (CNY-1064)
    * The Conary client version is saved before the re-execution of conary
      that follows the application of a critical update. (CNY-1034)

Changes in 1.0.38:
  o Client Changes:
    * "conary help [command]" now displays the usage message for
      the command.
    * The --help options will now display a smaller number of flags by
      default, and more when the --verbose flag is added.
    * A getUpdateItemList() method has been added to the ConaryClient
      class.  It returns a list of top level troves on the local
      system. (CNY-1025)
    * "conary rq package:source --tags" will now show an "autosource"
      tag on autosourced files.
    * Conary now correctly uses "KB/s" instead of "Kb/s" when
      displaying transfer rates. (CNY-330)
    * conary rblist is now more readable, and supports --labels and
      --full-versions. (CNY-410)

  o Build Changes:
    * When using "cvc refresh" to refresh autosourced files, the
      refresh flag is now reset after the commit.  Previously, the
      file would continue to be refreshed on subsequent commits.
    * When using "cvc commit", cvc no longer downloads autosourced
      files which haven't changed (CNY-611, CNY-463)
    * Files that were previously marked as autosource files can now be
      made a regular file by calling "cvc add".
    * When using "cvc remove" to remove a file from the local checkout